--- a/OwnersAndPets/Views/FirstPage/Index.cshtml
+++ b/OwnersAndPets/Views/FirstPage/Index.cshtml
@@ -13,32 +13,27 @@
     <title>First Page</title>
 </head>
 <body data-ng-controller="AppController">
-    <h2>All Users</h2>
-    
-    
-    <form name="addOwner">
-        
-             <input type="text" style="width:200px;" class="form-control" id="name" placeholder="Enter pet owners name" data-ng-model="Owner.Name" required />
-        
-            <input type="submit" value="Add" data-ng-click="add()" class="btn btn-primary" />
+    <h2 style="text-align:center">All Users</h2>
+    <br />
+    <form name="addOwner" style="margin-left:40%;">
+        <input type="text" style="width:200px;display:inline" class="form-control" id="name" placeholder="Enter pet owners name" data-ng-model="Owner.Name" required />
+        <input style="display:inline" type="submit" value="Add" data-ng-click="add()" class="btn btn-primary" />
     </form>
-
-    <table ng-table="tableParams" class="table table-bordered table-hover" style="width:800px">
+    <br />
+    <hr />
+    <br />
+    <table ng-table="tableParams" class="table table-bordered table-hover" style="width:500px;margin-left:auto;margin-right:auto;">
         <tr>
-            <th>#</th>
+            <th ng-show="onId">#</th>
             <td>Name</td>
             <th>Pets Count</th>
         </tr>
         <tr ng-repeat="owner in owners">
-            <td><a href="/SecondPage/Index/{{owner.Id}}">{{ owner.Id }}</a></td>
-            <td>{{ owner.Name }}</td>
-            <td>{{ owner.PetCount }}<button ng-click="delete($index)">Delete</button></td>
+            <td ng-show="onId">{{ owner.Id }}</td>
+            <td><a href="/SecondPage/Index/{{owner.Id}}">{{ owner.Name }}</a></td>
+            <td>{{ owner.PetCount }}<button style="float:right;" ng-click="delete($index)">Delete</button></td>
         </tr>
     </table>
-    
-    <hr />
-
-
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
