--- a/OwnersAndPets/Views/SecondPage/Index.cshtml
+++ b/OwnersAndPets/Views/SecondPage/Index.cshtml
@@ -20,7 +20,6 @@
     <form name="addPet">
 
         <input type="text" style="width:200px;" class="form-control" id="name" placeholder="Enter Pet's name" data-ng-model="Pet.Name" required />
-
         <input type="submit" value="Add" data-ng-click="addPet()" class="btn btn-primary" />
     </form>
     <p>Total count:</p>
@@ -31,7 +30,7 @@
         </tr>
         <tr ng-repeat="pet in pets">
             <td>{{ pet.Id }}</td>
-            <td>{{ pet.Name }}<button ng-click="delete($index)">Delete</button></td>
+            <td>{{ pet.Name }}<button style="float:right" ng-click="delete($index)">Delete</button></td>
         </tr>
     </table>
 </body>
